--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://agusvigno.github.io/react-ecommerce",
+  "homepage": "https://agusvigno.github.io/react-ecommerce/",
   "name": "ecommerce",
   "version": "0.1.0",
   "private": true,
